[package]
name = "bitceptron-retriever-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
bip39 = "2.0.0"
bitceptron-retriever = { git="https://github.com/bitceptron/bitceptron-retriever.git"}
bitcoin = "0.31.2"
getset = "0.1.2"
iced = { version = "0.12.1", features = ["advanced", "tokio", "canvas"] }
regex = "1.10.4"
