[package]
name = "bitceptron-retriever-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
bitceptron-retriever = { git="https://github.com/bitceptron/bitceptron-retriever.git"}
bitcoin = "0.31.2"
getset = "0.1.2"
iced = { version = "0.12.1", features = ["advanced", "tokio", "canvas"] }
regex = "1.10.4"
tokio = { version = "1.37.0", features = ["full"] }
bitcoincore-rpc = "0.18.0"
miniscript = "11.0.0"
serde = { version = "1.0.200", features = ["derive"] }
strum = { version = "0.26.2", features = ["derive"] }
num-format = "0.4.4"
hashbrown = "0.14.5"
txoutset = "0.3.0"
bip39 = { version = "2.0.0", features = ["zeroize"] }
hex = "0.4.3"
zeroize = { version = "1.7.0", features = ["zeroize_derive"] }
config = "0.14.0"
clap = { version = "4.5.4", features = ["cargo"] }
rayon = "1.10.0"
itertools = "0.13.0"
tracing = "0.1.40"
tracing-log = "0.2.0"
tracing-subscriber = "0.3.18"